--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,3 @@
-/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
 
 /* ==========================================================================
    Base styles: opinionated defaults
@@ -96,8 +89,86 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
+    background-color: #D2E58F;
+    font-family: Times, Times New Roman, Georgia, serif;
+
+}
+
+header {
+
+    background-color: #90AB2B
+
+}
+
+h1 {
+    text-align: center;
+    font-family: monospace, Georgia;
+    font-size:
+    color: #0C3343;
+    position: static;
+
+}
+
+.signout {
+    position: rightstatic;
+    -moz-box-shadow: 0px 10px 14px -7px #3e7327;
+  	-webkit-box-shadow: 0px 10px 14px -7px #3e7327;
+  	box-shadow: 0px 10px 14px -7px #3e7327;
+  	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
+  	background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  	background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  	background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  	background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  	background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+  	background-color:#77b55a;
+  	-moz-border-radius:4px;
+  	-webkit-border-radius:4px;
+  	border-radius:4px;
+  	border:1px solid #4b8f29;
+  	display:inline-block;
+  	cursor:pointer;
+  	color:#ffffff;
+  	font-family:Arial;
+  	font-size:13px;
+  	font-weight:bold;
+  	padding:6px 12px;
+  	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+.signout:hover {
+  	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+  	background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  	background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  	background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  	background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+  	background-color:#72b352;
+}
+.signout:active {
+    position:relative;
+    top:1px;
+
+}
+footer {
+    background-color: #90AB2B
+}
+.adresse {
+  font-family: sans-serif;
+  font-size: 12px;
+  position: static;
+}
+.mail {
+  font-family: Times,monospace,inherit;
+  font-size: 0.9em;
+  position: static;
+}
+main {
 
 
+}
 
 
 
